# trafficserver

./: Makefile.am  config.layout  configure.ac
include/ts/: apidefs.h.in  sdt.h  ts.h
include/tscore/: List.h  PendingAction.h  ink_align.h  ink_file.h
iocore/aio/: AIO.cc  DiskEventIO.cc  DiskEventIO.h  I_AIO.h  Makefile.am  P_AIO.h
iocore/cache/: Cache.cc  CacheDir.cc  CacheLink.cc
iocore/dns/: CMakeLists.txt  DNS.cc  DNSConnection.cc  Makefile.am  P_DNSConnection.h
iocore/eventsystem/: I_Continuation.h  I_EThread.h  I_IOBuffer.h  I_Lock.h  I_ProxyAllocator.h  I_Thread.h  I_VIO.h  P_EventSystem.h  P_IOBuffer.h  P_VIO.h  SocketManager.cc  UnixEThread.cc
iocore/fs/: FileChange.cc  FileChange.h  Makefile.am
iocore/hostdb/: HostDB.cc
iocore/io_uring/: IOUringEventIO.cc  IOUringEventIO.h  I_IO_URING.h  Makefile.am  io_uring.cc
iocore/io_uring/unit_tests/: test_diskIO.cc
iocore/net/: AsyncSignalEventIO.cc  AsyncSignalEventIO.h  CMakeLists.txt  Connection.cc  EventIO.cc  EventIO.h  IOUringConnection.cc  IOUringConnection.h  IOUringNet.cc  IOUringNetAccept.cc  IOUringNetAccept.h  IOUringNetProcessor.cc  IOUringNetVConnection.cc  I_NetProcessor.h  I_NetVConnection.h  Makefile.am  Net.cc  NetAIO.h  NetEvent.h  NetVCOptions.cc  NetVCOptions.h  NetVCTest.cc  P_Connection.h  P_EventIO.h  P_IOUringNet.h  P_IOUringNetProcessor.h  P_IOUringNetVConnection.h  P_Net.h  P_NetAccept.h  P_QUICNet.h  P_QUICNetProcessor.h  P_QUICNetProcessor_native.h  P_SSLConfig.h  P_UDPNet.h  (+39 more)
mgmt/: RecordsConfig.cc
proxy/: ParentSelection.cc  PluginVC.cc  PluginVC.h  ProxyTransaction.cc
(+94 files in other folders)
